done show all patient of userID in fe